# honeypotx

./: .clang-format  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
config/: example.json  example.toml
configs/: default.toml  hpx.toml
scripts/: run.lua
src/: analyze.rs  app.rs  cli.rs  config.rs  engine.rs  get.rs  helpers.rs  load.rs  lua.rs  main.rs  maps.rs  objects.rs  programs.rs  secret.rs  snippets.rs  unload.rs
src/bpf/: generated.c  vmlinux.h  xdp.c  xdp_common.h
