[package]
name = "hpx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
crossterm = "0.28.1"
libbpf-rs = "0.24.5"
pnet = "0.35.0"
rlimit = "0.10.2"
rpassword = "7.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.133"
ssh2 = "0.9.4"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
